bk_ida/gccida/g1/expr_size
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expr_size/src/explow.c:757:39: error: use of undeclared identifier 'machine_mode'
return expand_expr( size_unit, 0LL, ( machine_mode)( BYTE5( sizetype_tab[0]->block.abstract_origin) >> 1), EXPAND_NORMAL); 
                                      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expr_size/src/obj/explow.o] Error 1
